fix: hiding list items for pagenation overflow in mobile

--- a/themes/v-framework/assets/sass/theme.scss
+++ b/themes/v-framework/assets/sass/theme.scss
@@ -67,4 +67,8 @@ section {
         flex-wrap: wrap;
         justify-content: center;
     }
+
+    .mobile-hidden {
+        display: none;
+    }
 }
